LIST OF CHANGES
---------------

release 56.0.0
 - add autosome target to seq_alignment
 - pipeline configuration module and product release configuration
   accessors are moved to npg_tracking package in order for the product
   configuration be accessible from other packages, code in this
   package refactored to accommodate the change
 - conform to bambi's v 0.12.0 file and directory naming schema for
   tileviz data
 - add facility to do LSF 1:1 job index dependencies on array jobs
 - when validating run folder for deletion, ensure linked directories
   and files are recognised

release 55.2
 - switched from S3 to Google Compute Storage
 - change bcfstats qc job to use CRAM instead of BAM file as input

release 55.1
 - added configuration option to change the S3 endpoint URL

release 55.0.1
 - bug fix for invocation of the generate() function in the
   seq_alignment function module following an addition of the
   generate_composition function

release 55.0
 - additional 'GnT MDA' library type added to allowed types for gbs analysis
 - a new archival pipeline function, cache_merge_component, for caching merge
   candidates as a part of the archival pipeline
 - no overwriting existing tileviz files when scaffolding teh runfolder
 - a new function, generate_compositions, for generating composition JSON files
 - npg_run_is_deletable:
    cross-checks for all file archival destinations to ensure that each
      product is archived in at least one destination;
    full logic for validating correctness of s3 archival

release 54.1.2
 - set explicit umask for wr jobs to guarantee that output is group-writable

release 54.1.1
 - bug fix in command generation for iRODS data archival from old-style
   run folders

release 54.1
 - minor speed-up in seq_alignment function due to caching of
   unseccessfully retrieved references
 - npg_run_is_deletable understands per-product iRODS collections and
   make runs that have products archivable to s3 not deletable